sdk/include/phapppub.h


typedef struct _PH_PROCESS_ITEM *PPH_PROCESS_ITEM;
typedef struct _PH_PROCESS_RECORD *PPH_PROCESS_RECORD;
typedef enum _PH_KNOWN_PROCESS_TYPE
{
    UnknownProcessType,
    SystemProcessType, 
    SessionManagerProcessType, 
    WindowsSubsystemProcessType, 
    WindowsStartupProcessType, 
    ServiceControlManagerProcessType, 
    LocalSecurityAuthorityProcessType, 
    LocalSessionManagerProcessType, 
    WindowsLogonProcessType, 
    ServiceHostProcessType, 
    RunDllAsAppProcessType, 
    ComSurrogateProcessType, 
    TaskHostProcessType, 
    ExplorerProcessType, 
    UmdfHostProcessType, 
    NtVdmHostProcessType, 
    WmiProviderHostType,
    MaximumProcessType,
    KnownProcessTypeMask = 0xffff,
    KnownProcessWow64 = 0x20000
} PH_KNOWN_PROCESS_TYPE;
typedef struct _PH_EMENU_ITEM* PPH_EMENU_ITEM;
typedef struct _PH_PROCESS_RECORD *PPH_PROCESS_RECORD;
typedef struct _PH_IMAGELIST_ITEM
{
    PPH_STRING FileName;
    ULONG LargeIconIndex;
    ULONG SmallIconIndex;
} PH_IMAGELIST_ITEM, *PPH_IMAGELIST_ITEM;
typedef struct _PH_PROCESS_ITEM
{
    PH_HASH_ENTRY HashEntry;
    ULONG State;
    PPH_PROCESS_RECORD Record;
    HANDLE ProcessId;
    HANDLE ParentProcessId;
    PPH_STRING ProcessName;
    ULONG SessionId;
    LARGE_INTEGER CreateTime;
    HANDLE QueryHandle;
    PPH_STRING FileName;
    PPH_STRING CommandLine;
    ULONG_PTR SmallIconIndex;
    ULONG_PTR LargeIconIndex;
    PH_IMAGE_VERSION_INFO VersionInfo;
    PSID Sid;
    TOKEN_ELEVATION_TYPE ElevationType;
    PH_INTEGRITY_LEVEL IntegrityLevel;
    PPH_STRINGREF IntegrityString;
    PS_PROTECTION Protection;
    PPH_STRING ProtectionString;
    HANDLE ConsoleHostProcessId;
    ULONGLONG ProcessStartKey;
    ULONGLONG CreateInterruptTime;
    ULONGLONG SessionCreateTime;
    ULONG ImageChecksum;
    ULONG ImageTimeStamp;
    ULONG VerifyResult;
    PPH_STRING VerifySignerName;
    ULONG ImportFunctions;
    ULONG ImportModules;
    union
    {
        ULONG Flags;
#ifndef NO_BITFIELD
        struct
        {
            ULONG UpdateIsDotNet : 1;
            ULONG IsBeingDebugged : 1;
            ULONG IsDotNet : 1;
            ULONG IsElevated : 1;
            ULONG IsInJob : 1;
            ULONG IsInSignificantJob : 1;
            ULONG IsPacked : 1;
            ULONG IsHandleValid : 1;
            ULONG IsSuspended : 1;
            ULONG IsWow64Process : 1;
            ULONG IsImmersive : 1;
            ULONG IsPartiallySuspended : 1;
            ULONG IsProtectedHandle : 1;
            ULONG IsProtectedProcess : 1;
            ULONG IsSecureProcess : 1;
            ULONG IsSubsystemProcess : 1;
            ULONG IsPackagedProcess : 1;
            ULONG IsBackgroundProcess : 1;
            ULONG IsCrossSessionProcess : 1;
            ULONG IsReflectedProcess : 1;
            ULONG IsFrozenProcess : 1;
            ULONG IsUIAccessEnabled : 1;
            ULONG IsControlFlowGuardEnabled : 1;
            ULONG IsCetEnabled : 1;
            ULONG IsXfgEnabled : 1;
            ULONG IsXfgAuditEnabled : 1;
            ULONG IsPowerThrottling : 1;
            ULONG IsSystemProcess : 1;
            ULONG IsSecureSystem : 1;
            ULONG Spare : 3;
        };
#endif 
    };
    volatile LONG JustProcessed;
    PH_EVENT Stage1Event;
    PPH_POINTER_LIST ServiceList;
    PH_QUEUED_LOCK ServiceListLock;
    WCHAR ProcessIdString[PH_INT32_STR_LEN_1];
    WCHAR ProcessIdHexString[PH_PTR_STR_LEN_1];
    KPRIORITY BasePriority;
    PKAFFINITY AffinityMasks; 
    ULONG AffinityPopulationCount;
    ULONG PriorityClass;
    LARGE_INTEGER KernelTime;
    LARGE_INTEGER UserTime;
    ULONG NumberOfHandles;
    ULONG NumberOfThreads;
    FLOAT CpuUsage; 
    FLOAT CpuKernelUsage;
    FLOAT CpuUserUsage;
    FLOAT CpuAverageUsage;
    PH_UINT64_DELTA CpuKernelDelta;
    PH_UINT64_DELTA CpuUserDelta;
    PH_UINT64_DELTA IoReadDelta;
    PH_UINT64_DELTA IoWriteDelta;
    PH_UINT64_DELTA IoOtherDelta;
    PH_UINT64_DELTA IoReadCountDelta;
    PH_UINT64_DELTA IoWriteCountDelta;
    PH_UINT64_DELTA IoOtherCountDelta;
    PH_UINT64_DELTA ContextSwitchesDelta;
    PH_UINT32_DELTA PageFaultsDelta;
    PH_UINT32_DELTA HardFaultsDelta;
    PH_UINT64_DELTA CycleTimeDelta; 
    VM_COUNTERS_EX VmCounters;
    IO_COUNTERS IoCounters;
    ULONGLONG WorkingSetPrivateSize; 
    ULONG PeakNumberOfThreads; 
    ULONG HardFaultCount; 
    ULONG TimeSequenceNumber;
    PH_CIRCULAR_BUFFER_FLOAT CpuKernelHistory;
    PH_CIRCULAR_BUFFER_FLOAT CpuUserHistory;
    PH_CIRCULAR_BUFFER_ULONG64 IoReadHistory;
    PH_CIRCULAR_BUFFER_ULONG64 IoWriteHistory;
    PH_CIRCULAR_BUFFER_ULONG64 IoOtherHistory;
    PH_CIRCULAR_BUFFER_SIZE_T PrivateBytesHistory;
    PH_UINTPTR_DELTA PrivateBytesDelta;
    PPH_STRING PackageFullName;
    PPH_STRING UserName;
    PROCESS_DISK_COUNTERS DiskCounters;
    PROCESS_NETWORK_COUNTERS NetworkCounters;
    ULONGLONG ContextSwitches;
    ULONGLONG ProcessSequenceNumber;
    PH_KNOWN_PROCESS_TYPE KnownProcessType;
    ULONG JobObjectId;
    SIZE_T SharedCommitCharge;
    PPH_IMAGELIST_ITEM IconEntry;
    NTSTATUS ImageCoherencyStatus;
    FLOAT ImageCoherency;
    ULONG LxssProcessId;
    HANDLE FreezeHandle;
} PH_PROCESS_ITEM, *PPH_PROCESS_ITEM;
typedef struct _PH_PROCESS_RECORD
{
    LIST_ENTRY ListEntry;
    LONG RefCount;
    ULONG Flags;
    HANDLE ProcessId;
    HANDLE ParentProcessId;
    ULONG SessionId;
    ULONGLONG ProcessSequenceNumber;
    LARGE_INTEGER CreateTime;
    LARGE_INTEGER ExitTime;
    PPH_STRING ProcessName;
    PPH_STRING FileName;
    PPH_STRING CommandLine;
} PH_PROCESS_RECORD, *PPH_PROCESS_RECORD;
typedef struct _PH_IMAGELIST_ITEM* PPH_IMAGELIST_ITEM;
typedef enum _PH_KNOWN_PROCESS_TYPE PH_KNOWN_PROCESS_TYPE;
typedef enum _PH_SYSINFO_VIEW_TYPE
{
    SysInfoSummaryView,
    SysInfoSectionView
} PH_SYSINFO_VIEW_TYPE;
typedef VOID (NTAPI *PPH_SYSINFO_COLOR_SETUP_FUNCTION)(
    _Out_ PPH_GRAPH_DRAW_INFO DrawInfo,
    _In_ COLORREF Color1,
    _In_ COLORREF Color2,
    _In_ LONG WindowDpi
    );
typedef struct _PH_SYSINFO_PARAMETERS
{
    HWND SysInfoWindowHandle;
    HWND ContainerWindowHandle;
    HFONT Font;
    HFONT MediumFont;
    HFONT LargeFont;
    ULONG FontHeight;
    ULONG FontAverageWidth;
    ULONG MediumFontHeight;
    ULONG MediumFontAverageWidth;
    COLORREF GraphBackColor;
    COLORREF PanelForeColor;
    PPH_SYSINFO_COLOR_SETUP_FUNCTION ColorSetupFunction;
    ULONG MinimumGraphHeight;
    ULONG SectionViewGraphHeight;
    LONG PanelWidth;
    LONG WindowDpi;
} PH_SYSINFO_PARAMETERS, *PPH_SYSINFO_PARAMETERS;
typedef enum _PH_SYSINFO_SECTION_MESSAGE
{
    SysInfoCreate,
    SysInfoDestroy,
    SysInfoTick,
    SysInfoViewChanging, 
    SysInfoCreateDialog, 
    SysInfoGraphGetDrawInfo, 
    SysInfoGraphGetTooltipText, 
    SysInfoGraphDrawPanel, 
    SysInfoDpiChanged, 
    MaxSysInfoMessage
} PH_SYSINFO_SECTION_MESSAGE;
typedef struct _PH_SYSINFO_SECTION *PPH_SYSINFO_SECTION;
typedef BOOLEAN (NTAPI *PPH_SYSINFO_SECTION_CALLBACK)(
    _In_ PPH_SYSINFO_SECTION Section,
    _In_ PH_SYSINFO_SECTION_MESSAGE Message,
    _In_opt_ PVOID Parameter1,
    _In_opt_ PVOID Parameter2
    );
typedef struct _PH_SYSINFO_CREATE_DIALOG
{
    BOOLEAN CustomCreate;
    PVOID Instance;
    PWSTR Template;
    DLGPROC DialogProc;
    PVOID Parameter;
} PH_SYSINFO_CREATE_DIALOG, *PPH_SYSINFO_CREATE_DIALOG;
typedef struct _PH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT
{
    ULONG Index;
    PH_STRINGREF Text;
} PH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT, *PPH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT;
typedef struct _PH_SYSINFO_DRAW_PANEL
{
    HDC hdc;
    RECT Rect;
    BOOLEAN CustomDraw;
    PPH_STRING Title;
    PPH_STRING SubTitle;
    PPH_STRING SubTitleOverflow;
} PH_SYSINFO_DRAW_PANEL, *PPH_SYSINFO_DRAW_PANEL;
typedef struct _PH_SYSINFO_SECTION
{
    PH_STRINGREF Name;
    ULONG Flags;
    PPH_SYSINFO_SECTION_CALLBACK Callback;
    PVOID Context;
    PVOID Reserved[3];
    HWND GraphHandle;
    PH_GRAPH_STATE GraphState;
    PPH_SYSINFO_PARAMETERS Parameters;
    PVOID Reserved2[3];
} PH_SYSINFO_SECTION, *PPH_SYSINFO_SECTION;
typedef struct _PH_PROCESS_GROUP
{
    PPH_PROCESS_ITEM Representative; 
    PPH_LIST Processes; 
    HWND WindowHandle; 
} PH_PROCESS_GROUP, *PPH_PROCESS_GROUP;
typedef struct _PH_MINIINFO_SECTION PH_MINIINFO_SECTION, *PPH_MINIINFO_SECTION;
typedef VOID (NTAPI *PPH_MINIINFO_SET_SECTION_TEXT)(
    _In_ PPH_MINIINFO_SECTION Section,
    _In_opt_ PPH_STRING Text
    );
typedef struct _PH_MINIINFO_PARAMETERS
{
    HWND ContainerWindowHandle;
    HWND MiniInfoWindowHandle;
    HFONT Font;
    HFONT MediumFont;
    ULONG FontHeight;
    ULONG FontAverageWidth;
    ULONG MediumFontHeight;
    ULONG MediumFontAverageWidth;
    PPH_MINIINFO_SET_SECTION_TEXT SetSectionText;
} PH_MINIINFO_PARAMETERS, *PPH_MINIINFO_PARAMETERS;
typedef enum _PH_MINIINFO_SECTION_MESSAGE
{
    MiniInfoCreate,
    MiniInfoDestroy,
    MiniInfoTick,
    MiniInfoSectionChanging, 
    MiniInfoShowing, 
    MiniInfoCreateDialog, 
    MaxMiniInfoMessage
} PH_MINIINFO_SECTION_MESSAGE;
typedef BOOLEAN (NTAPI *PPH_MINIINFO_SECTION_CALLBACK)(
    _In_ PPH_MINIINFO_SECTION Section,
    _In_ PH_MINIINFO_SECTION_MESSAGE Message,
    _In_opt_ PVOID Parameter1,
    _In_opt_ PVOID Parameter2
    );
typedef struct _PH_MINIINFO_CREATE_DIALOG
{
    BOOLEAN CustomCreate;
    PVOID Instance;
    PWSTR Template;
    DLGPROC DialogProc;
    PVOID Parameter;
} PH_MINIINFO_CREATE_DIALOG, *PPH_MINIINFO_CREATE_DIALOG;
typedef struct _PH_MINIINFO_SECTION
{
    PH_STRINGREF Name;
    ULONG Flags;
    PPH_MINIINFO_SECTION_CALLBACK Callback;
    PVOID Context;
    PVOID Reserved1[3];
    PPH_MINIINFO_PARAMETERS Parameters;
    PVOID Reserved2[3];
} PH_MINIINFO_SECTION, *PPH_MINIINFO_SECTION;
typedef enum _PH_MINIINFO_LIST_SECTION_MESSAGE
{
    MiListSectionCreate,
    MiListSectionDestroy,
    MiListSectionTick,
    MiListSectionShowing, 
    MiListSectionDialogCreated, 
    MiListSectionSortProcessList, 
    MiListSectionAssignSortData, 
    MiListSectionSortGroupList, 
    MiListSectionGetTitleText, 
    MiListSectionGetUsageText, 
    MiListSectionInitializeContextMenu, 
    MiListSectionHandleContextMenu, 
    MaxMiListSectionMessage
} PH_MINIINFO_LIST_SECTION_MESSAGE;
typedef struct _PH_MINIINFO_LIST_SECTION PH_MINIINFO_LIST_SECTION, *PPH_MINIINFO_LIST_SECTION;
typedef BOOLEAN (NTAPI *PPH_MINIINFO_LIST_SECTION_CALLBACK)(
    _In_ PPH_MINIINFO_LIST_SECTION ListSection,
    _In_ PH_MINIINFO_LIST_SECTION_MESSAGE Message,
    _In_opt_ PVOID Parameter1,
    _In_opt_ PVOID Parameter2
    );
typedef struct _PH_MINIINFO_LIST_SECTION_SORT_DATA
{
    PH_TREENEW_NODE DoNotModify;
    ULONGLONG UserData[4];
} PH_MINIINFO_LIST_SECTION_SORT_DATA, *PPH_MINIINFO_LIST_SECTION_SORT_DATA;
typedef struct _PH_MINIINFO_LIST_SECTION_ASSIGN_SORT_DATA
{
    PPH_PROCESS_GROUP ProcessGroup;
    PPH_MINIINFO_LIST_SECTION_SORT_DATA SortData;
} PH_MINIINFO_LIST_SECTION_ASSIGN_SORT_DATA, *PPH_MINIINFO_LIST_SECTION_ASSIGN_SORT_DATA;
typedef struct _PH_MINIINFO_LIST_SECTION_SORT_LIST
{
    PPH_LIST List;
} PH_MINIINFO_LIST_SECTION_SORT_LIST, *PPH_MINIINFO_LIST_SECTION_SORT_LIST;
typedef struct _PH_MINIINFO_LIST_SECTION_GET_TITLE_TEXT
{
    PPH_PROCESS_GROUP ProcessGroup;
    PPH_MINIINFO_LIST_SECTION_SORT_DATA SortData;
    PPH_STRING Title; 
    PPH_STRING Subtitle; 
    COLORREF TitleColor;
    COLORREF SubtitleColor;
} PH_MINIINFO_LIST_SECTION_GET_TITLE_TEXT, *PPH_MINIINFO_LIST_SECTION_GET_TITLE_TEXT;
typedef struct _PH_MINIINFO_LIST_SECTION_GET_USAGE_TEXT
{
    PPH_PROCESS_GROUP ProcessGroup;
    PPH_MINIINFO_LIST_SECTION_SORT_DATA SortData;
    PPH_STRING Line1; 
    PPH_STRING Line2; 
    COLORREF Line1Color;
    COLORREF Line2Color;
} PH_MINIINFO_LIST_SECTION_GET_USAGE_TEXT, *PPH_MINIINFO_LIST_SECTION_GET_USAGE_TEXT;
typedef struct _PH_MINIINFO_LIST_SECTION_MENU_INFORMATION
{
    PPH_PROCESS_GROUP ProcessGroup;
    PPH_MINIINFO_LIST_SECTION_SORT_DATA SortData;
    PPH_TREENEW_CONTEXT_MENU ContextMenu;
    PPH_EMENU_ITEM SelectedItem;
} PH_MINIINFO_LIST_SECTION_MENU_INFORMATION, *PPH_MINIINFO_LIST_SECTION_MENU_INFORMATION;
typedef struct _PH_MINIINFO_LIST_SECTION
{
    PPH_MINIINFO_SECTION Section; 
    HWND DialogHandle; 
    HWND TreeNewHandle; 
    PVOID Context; 
    PPH_MINIINFO_LIST_SECTION_CALLBACK Callback; 
} PH_MINIINFO_LIST_SECTION, *PPH_MINIINFO_LIST_SECTION;
typedef struct _PH_MINIINFO_LIST_SECTION PH_MINIINFO_LIST_SECTION, *PPH_MINIINFO_LIST_SECTION;