sdk/include/phbasesup.h


typedef struct _PH_STRINGREF
{
    SIZE_T Length;
    PWCH Buffer;
} PH_STRINGREF, *PPH_STRINGREF;
typedef struct _PH_STRING
{
    union
    {
        PH_STRINGREF sr;
        struct
        {
            SIZE_T Length;
            PWCH Buffer;
        };
    };
    union
    {
        WCHAR Data[1];
        struct
        {
            ULONG AllocationFlags;
            PVOID Allocation;
        };
    };
} PH_STRING, *PPH_STRING;
typedef struct _PH_LIST
{
    ULONG Count;
    ULONG AllocatedCount;
    PVOID *Items;
} PH_LIST, *PPH_LIST;