lib/src/system_informer/generated_bindings.dart


typedef PH_SYSINFO_PARAMETERS$1 = PH_SYSINFO_PARAMETERS;
typedef PPH_SYSINFO_PARAMETERS = ffi.Pointer<PH_SYSINFO_PARAMETERS>;

enum PH_SYSINFO_SECTION_MESSAGE {
  SysInfoCreate(0),
  SysInfoDestroy(1),
  SysInfoTick(2),

  /// PH_SYSINFO_VIEW_TYPE Parameter1, PPH_SYSINFO_SECTION Parameter2
  SysInfoViewChanging(3),

  /// PPH_SYSINFO_CREATE_DIALOG Parameter1
  SysInfoCreateDialog(4),

  /// PPH_GRAPH_DRAW_INFO Parameter1
  SysInfoGraphGetDrawInfo(5),

  /// PPH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT Parameter1
  SysInfoGraphGetTooltipText(6),

  /// PPH_SYSINFO_DRAW_PANEL Parameter1
  SysInfoGraphDrawPanel(7),

  /// ULONG Parameter1
  SysInfoDpiChanged(8),
  MaxSysInfoMessage(9);

  final int value;
  const PH_SYSINFO_SECTION_MESSAGE(this.value);

  static PH_SYSINFO_SECTION_MESSAGE fromValue(int value) => switch (value) {
        0 => SysInfoCreate,
        1 => SysInfoDestroy,
        2 => SysInfoTick,
        3 => SysInfoViewChanging,
        4 => SysInfoCreateDialog,
        5 => SysInfoGraphGetDrawInfo,
        6 => SysInfoGraphGetTooltipText,
        7 => SysInfoGraphDrawPanel,
        8 => SysInfoDpiChanged,
        9 => MaxSysInfoMessage,
        _ => throw ArgumentError(
            'Unknown value for PH_SYSINFO_SECTION_MESSAGE: $value'),
      };
}

typedef PPH_SYSINFO_SECTION = ffi.Pointer<PH_SYSINFO_SECTION>;
typedef PPH_SYSINFO_SECTION_CALLBACKFunction = BOOLEAN Function(
    PPH_SYSINFO_SECTION Section,
    ffi.UnsignedInt Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef DartPPH_SYSINFO_SECTION_CALLBACKFunction = Dartboolean Function(
    PPH_SYSINFO_SECTION Section,
    PH_SYSINFO_SECTION_MESSAGE Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef PPH_SYSINFO_SECTION_CALLBACK
    = ffi.Pointer<ffi.NativeFunction<PPH_SYSINFO_SECTION_CALLBACKFunction>>;

final class PH_SYSINFO_SECTION extends ffi.Struct {
  /// Initialization
  external PH_STRINGREF$1 Name;

  @ULONG()
  external int Flags;

  external PPH_SYSINFO_SECTION_CALLBACK Callback;

  external PVOID Context;

  @ffi.Array.multi([3])
  external ffi.Array<PVOID> Reserved;

  /// State
  external HWND GraphHandle;

  external PH_GRAPH_STATE$1 GraphState;

  external PPH_SYSINFO_PARAMETERS Parameters;

  @ffi.Array.multi([3])
  external ffi.Array<PVOID> Reserved2;
}

typedef INT_PTR = ffi.LongLong;
typedef DartINT_PTR = int;
typedef DLGPROCFunction = INT_PTR Function(HWND, UINT, WPARAM, LPARAM);
typedef DartDLGPROCFunction = DartINT_PTR Function(
    HWND, DartUINT, DartUINT_PTR, DartLONG_PTR);
typedef DLGPROC = ffi.Pointer<ffi.NativeFunction<DLGPROCFunction>>;

final class PH_SYSINFO_CREATE_DIALOG extends ffi.Struct {
  @BOOLEAN()
  external int CustomCreate;

  /// Parameters for default create
  external PVOID Instance;

  external PWSTR Template;

  external DLGPROC DialogProc;

  external PVOID Parameter;
}

typedef PH_SYSINFO_CREATE_DIALOG$1 = PH_SYSINFO_CREATE_DIALOG;
typedef PPH_SYSINFO_CREATE_DIALOG = ffi.Pointer<PH_SYSINFO_CREATE_DIALOG>;

final class PH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT extends ffi.Struct {
  @ULONG()
  external int Index;

  external PH_STRINGREF$1 Text;
}

typedef PH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT$1 = PH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT;
typedef PPH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT
    = ffi.Pointer<PH_SYSINFO_GRAPH_GET_TOOLTIP_TEXT>;

final class PH_SYSINFO_DRAW_PANEL extends ffi.Struct {
  external HDC hdc;

  external RECT Rect;

  @BOOLEAN()
  external int CustomDraw;

  /// Parameters for default draw
  external PPH_STRING Title;

  external PPH_STRING SubTitle;

  external PPH_STRING SubTitleOverflow;
}

typedef PH_SYSINFO_DRAW_PANEL$1 = PH_SYSINFO_DRAW_PANEL;
typedef PPH_SYSINFO_DRAW_PANEL = ffi.Pointer<PH_SYSINFO_DRAW_PANEL>;
typedef PH_SYSINFO_SECTION$1 = PH_SYSINFO_SECTION;

/// procgrp
final class PH_PROCESS_GROUP extends ffi.Struct {
  /// An element of Processes (no extra reference added)
  external PPH_PROCESS_ITEM Representative;

  /// List of PPH_PROCESS_ITEM
  external PPH_LIST Processes;

  /// Window handle of representative
  external HWND WindowHandle;
}

/// procgrp
typedef PH_PROCESS_GROUP$1 = PH_PROCESS_GROUP;
typedef PPH_PROCESS_GROUP = ffi.Pointer<PH_PROCESS_GROUP>;

/// Section
typedef PPH_MINIINFO_SECTION = ffi.Pointer<PH_MINIINFO_SECTION>;

enum PH_MINIINFO_SECTION_MESSAGE {
  MiniInfoCreate(0),
  MiniInfoDestroy(1),
  MiniInfoTick(2),

  /// PPH_MINIINFO_SECTION Parameter1
  MiniInfoSectionChanging(3),

  /// BOOLEAN Parameter1 (Showing)
  MiniInfoShowing(4),

  /// PPH_MINIINFO_CREATE_DIALOG Parameter1
  MiniInfoCreateDialog(5),
  MaxMiniInfoMessage(6);

  final int value;
  const PH_MINIINFO_SECTION_MESSAGE(this.value);

  static PH_MINIINFO_SECTION_MESSAGE fromValue(int value) => switch (value) {
        0 => MiniInfoCreate,
        1 => MiniInfoDestroy,
        2 => MiniInfoTick,
        3 => MiniInfoSectionChanging,
        4 => MiniInfoShowing,
        5 => MiniInfoCreateDialog,
        6 => MaxMiniInfoMessage,
        _ => throw ArgumentError(
            'Unknown value for PH_MINIINFO_SECTION_MESSAGE: $value'),
      };
}

typedef PPH_MINIINFO_SECTION_CALLBACKFunction = BOOLEAN Function(
    PPH_MINIINFO_SECTION Section,
    ffi.UnsignedInt Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef DartPPH_MINIINFO_SECTION_CALLBACKFunction = Dartboolean Function(
    PPH_MINIINFO_SECTION Section,
    PH_MINIINFO_SECTION_MESSAGE Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef PPH_MINIINFO_SECTION_CALLBACK
    = ffi.Pointer<ffi.NativeFunction<PPH_MINIINFO_SECTION_CALLBACKFunction>>;
typedef PPH_MINIINFO_SET_SECTION_TEXTFunction = ffi.Void Function(
    PPH_MINIINFO_SECTION Section, PPH_STRING Text);
typedef DartPPH_MINIINFO_SET_SECTION_TEXTFunction = void Function(
    PPH_MINIINFO_SECTION Section, PPH_STRING Text);
typedef PPH_MINIINFO_SET_SECTION_TEXT
    = ffi.Pointer<ffi.NativeFunction<PPH_MINIINFO_SET_SECTION_TEXTFunction>>;

final class PH_MINIINFO_PARAMETERS extends ffi.Struct {
  external HWND ContainerWindowHandle;

  external HWND MiniInfoWindowHandle;

  external HFONT Font;

  external HFONT MediumFont;

  @ULONG()
  external int FontHeight;

  @ULONG()
  external int FontAverageWidth;

  @ULONG()
  external int MediumFontHeight;

  @ULONG()
  external int MediumFontAverageWidth;

  external PPH_MINIINFO_SET_SECTION_TEXT SetSectionText;
}

typedef PPH_MINIINFO_PARAMETERS = ffi.Pointer<PH_MINIINFO_PARAMETERS>;

final class PH_MINIINFO_SECTION extends ffi.Struct {
  /// Initialization
  external PH_STRINGREF$1 Name;

  @ULONG()
  external int Flags;

  external PPH_MINIINFO_SECTION_CALLBACK Callback;

  external PVOID Context;

  @ffi.Array.multi([3])
  external ffi.Array<PVOID> Reserved1;

  external PPH_MINIINFO_PARAMETERS Parameters;

  @ffi.Array.multi([3])
  external ffi.Array<PVOID> Reserved2;
}

/// Section
typedef PH_MINIINFO_SECTION$1 = PH_MINIINFO_SECTION;
typedef PH_MINIINFO_PARAMETERS$1 = PH_MINIINFO_PARAMETERS;

final class PH_MINIINFO_CREATE_DIALOG extends ffi.Struct {
  @BOOLEAN()
  external int CustomCreate;

  /// Parameters for default create
  external PVOID Instance;

  external PWSTR Template;

  external DLGPROC DialogProc;

  external PVOID Parameter;
}

typedef PH_MINIINFO_CREATE_DIALOG$1 = PH_MINIINFO_CREATE_DIALOG;
typedef PPH_MINIINFO_CREATE_DIALOG = ffi.Pointer<PH_MINIINFO_CREATE_DIALOG>;

/// List section
enum PH_MINIINFO_LIST_SECTION_MESSAGE {
  MiListSectionCreate(0),
  MiListSectionDestroy(1),
  MiListSectionTick(2),

  /// BOOLEAN Parameter1 (Showing)
  MiListSectionShowing(3),

  /// HWND Parameter1 (DialogHandle)
  MiListSectionDialogCreated(4),

  /// PPH_MINIINFO_LIST_SECTION_SORT_LIST Parameter1
  MiListSectionSortProcessList(5),

  /// PPH_MINIINFO_LIST_SECTION_ASSIGN_SORT_DATA Parameter1
  MiListSectionAssignSortData(6),

  /// PPH_MINIINFO_LIST_SECTION_SORT_LIST Parameter1
  MiListSectionSortGroupList(7),

  /// PPH_MINIINFO_LIST_SECTION_GET_TITLE_TEXT Parameter1
  MiListSectionGetTitleText(8),

  /// PPH_MINIINFO_LIST_SECTION_GET_USAGE_TEXT Parameter1
  MiListSectionGetUsageText(9),

  /// PPH_MINIINFO_LIST_SECTION_MENU_INFORMATION Parameter1
  MiListSectionInitializeContextMenu(10),

  /// PPH_MINIINFO_LIST_SECTION_MENU_INFORMATION Parameter1
  MiListSectionHandleContextMenu(11),
  MaxMiListSectionMessage(12);

  final int value;
  const PH_MINIINFO_LIST_SECTION_MESSAGE(this.value);

  static PH_MINIINFO_LIST_SECTION_MESSAGE fromValue(int value) =>
      switch (value) {
        0 => MiListSectionCreate,
        1 => MiListSectionDestroy,
        2 => MiListSectionTick,
        3 => MiListSectionShowing,
        4 => MiListSectionDialogCreated,
        5 => MiListSectionSortProcessList,
        6 => MiListSectionAssignSortData,
        7 => MiListSectionSortGroupList,
        8 => MiListSectionGetTitleText,
        9 => MiListSectionGetUsageText,
        10 => MiListSectionInitializeContextMenu,
        11 => MiListSectionHandleContextMenu,
        12 => MaxMiListSectionMessage,
        _ => throw ArgumentError(
            'Unknown value for PH_MINIINFO_LIST_SECTION_MESSAGE: $value'),
      };
}

typedef PPH_MINIINFO_LIST_SECTION = ffi.Pointer<PH_MINIINFO_LIST_SECTION>;
typedef PPH_MINIINFO_LIST_SECTION_CALLBACKFunction = BOOLEAN Function(
    PPH_MINIINFO_LIST_SECTION ListSection,
    ffi.UnsignedInt Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef DartPPH_MINIINFO_LIST_SECTION_CALLBACKFunction = Dartboolean Function(
    PPH_MINIINFO_LIST_SECTION ListSection,
    PH_MINIINFO_LIST_SECTION_MESSAGE Message,
    PVOID Parameter1,
    PVOID Parameter2);
typedef PPH_MINIINFO_LIST_SECTION_CALLBACK = ffi
    .Pointer<ffi.NativeFunction<PPH_MINIINFO_LIST_SECTION_CALLBACKFunction>>;

final class PH_MINIINFO_LIST_SECTION extends ffi.Struct {
  /// State
  external PPH_MINIINFO_SECTION Section;

  /// State
  external HWND DialogHandle;

  /// State
  external HWND TreeNewHandle;

  /// Initialization
  external PVOID Context;

  /// Initialization
  external PPH_MINIINFO_LIST_SECTION_CALLBACK Callback;
}

typedef PH_MINIINFO_LIST_SECTION$1 = PH_MINIINFO_LIST_SECTION;

/// The list section performs the following steps when constructing the list of process groups:
/// 1. MiListSectionSortProcessList is sent in order to sort the process list.
/// 2. A small number of process groups is created from the first few processes in the sorted list (typically high
/// resource consumers).
/// 3. MiListSectionAssignSortData is sent for each process group so that the user can assign custom sort data to
/// each process group.
/// 4. MiListSectionSortGroupList is sent in order to ensure that the process groups are correctly sorted by resource
/// usage.
/// The user also has access to the sort data when handling MiListSectionGetTitleText and MiListSectionGetUsageText.
final class PH_MINIINFO_LIST_SECTION_SORT_DATA extends ffi.Opaque {}

/// The list section performs the following steps when constructing the list of process groups:
/// 1. MiListSectionSortProcessList is sent in order to sort the process list.
/// 2. A small number of process groups is created from the first few processes in the sorted list (typically high
/// resource consumers).
/// 3. MiListSectionAssignSortData is sent for each process group so that the user can assign custom sort data to
/// each process group.
/// 4. MiListSectionSortGroupList is sent in order to ensure that the process groups are correctly sorted by resource
/// usage.
/// The user also has access to the sort data when handling MiListSectionGetTitleText and MiListSectionGetUsageText.
typedef PH_MINIINFO_LIST_SECTION_SORT_DATA$1
    = PH_MINIINFO_LIST_SECTION_SORT_DATA;
typedef PPH_MINIINFO_LIST_SECTION_SORT_DATA
    = ffi.Pointer<PH_MINIINFO_LIST_SECTION_SORT_DATA>;

final class PH_MINIINFO_LIST_SECTION_ASSIGN_SORT_DATA extends ffi.Struct {
  external PPH_PROCESS_GROUP ProcessGroup;

  external PPH_MINIINFO_LIST_SECTION_SORT_DATA SortData;
}
